# OpenACC-to-OpenCL-Compiler

./: .gitignore  .gitmodules  Makefile  README.md  build  configure.ac  doxygen.conf  rose.sh.in
benchmark/: .host-data.c.swp  compile.sh  compile.sh.in  config.rc.in  eval-100.c  eval-min.c  execute.sh  execute.sh.in  execute_min.sh.in  generate.sh  generate.sh.in  process.sh.in
benchmark/101/0-1-1/: eval  host-data.c  kernels.cl
benchmark/101/0-1-128/: eval  host-data.c  kernels.cl
benchmark/101/0-1-16/: eval  host-data.c  kernels.cl
benchmark/101/0-1-2/: host-data.c  kernels.cl
benchmark/101/0-1-256/: eval  host-data.c  kernels.cl
benchmark/101/0-1-32/: eval  host-data.c  kernels.cl
benchmark/101/0-1-4/: host-data.c  kernels.cl
benchmark/101/0-1-64/: eval  host-data.c  kernels.cl
benchmark/101/0-1-8/: host-data.c  kernels.cl
benchmark/101/0-128-1/: eval  host-data.c  kernels.cl
benchmark/101/0-128-128/: eval  host-data.c  kernels.cl
benchmark/db-tools/: init_db  init_db.c  init_min_db.c
docs/: Makefile  OpenACC-to-OpenCL-doxygen.conf  main.dox
evaluation/: Makefile  Makefile.in  eval.c  synthesis.c
examples/: Makefile  examples.dox  generated-vect-add.c  generated-vect-add.cl  transformed-vect-add.c  vect-add.c
lib-openacc/: lib-openacc-host-to-device-runtime.h  lib-openacc.c  lib-openacc.cl  lib-openacc.cpp  lib-openacc.f  lib-openacc.h  lib-openacc.hpp  openacc.h
libopenacc/: Makefile
libopenacc/docs/: libopenacc.dox
libopenacc/lib/: Makefile  Makefile.in  lib-openacc.cl  libopenacc.c  libopenacc.cl
libopenacc/tests/: Makefile  acc_compiler_data.c  acc_data  acc_data.c  acc_device  acc_device.c  acc_init.c  acc_kernel  acc_kernel.c  acc_kernel.cl  acc_rc_test_01.c  container.c  data_00.c  data_01.c  data_02.c  data_empty.c  empty.cl  eval-makefile  eval.sh  eval_02.sh  make-environment.mk  plot.sh  process.sh  ref_02.c  reference.sh  rules.mk  test-vars.cg  test-vars.rc  test_01.c  test_02.c  vectadd.cl
openacc-to-opencl-examples/: openacc.c  openacc.cpp  openacc.f  opencl.c  opencl.cl  opencl.cpp  opencl.f
tests/: 500-main.c  Makefile  Makefile.in  README.md
tests/001-iteration/: Makefile.in
tests/002/: Makefile  Makefile.in  dev-list.c
tests/003/: Makefile.in  tuner-test-1.c  tuner-test-2.c
tests/101/: 101-host-data.c  101-kernel-libopenacc.c  Makefile  Makefile.in  host-data.c  init.c  kernel-libopenacc.c  kernel-openacc.c  klt.lt
tests/101-vector-constant-addition/: 101-kernel-openacc.c  Makefile.in  Makefile.in~
tests/102/: 102-host-data.c  102-kernel-libopenacc.c  Makefile  Makefile.in  host-data.c  init.c  kernel-libopenacc.c  kernel-openacc.c  klt.lt
tests/102-vector-constant-product/: Makefile.in  Makefile.in~
tests/103/: 103-host-data.c  103-kernel-libopenacc.c  Makefile  Makefile.in  host-data.c  init.c  kernel-libopenacc.c  kernel-openacc.c  klt.lt
tests/103-vector-vector-addition/: Makefile.in  Makefile.in~
tests/104/: Makefile.in  host-data.c  init.c  kernel-libopenacc.c  kernel-openacc.c  kernels.cl  klt.lt
tests/109/: Makefile.in  gang-i-worker-j.lt  gang-j-worker-j.lt  host-data.c  init.c  kernel-libopenacc.c  kernel-openacc.c  kernels.cl
tests/501/: 501-host-data.c  501-kernel-libopenacc.c  501-kernel-openacc.c  501-klt.lt  Makefile  Makefile.in  host-data.c  init.c  kernel-libopenacc.c  kernels.cl
tests/509/: Makefile.in  gang-i-worker-i.lt  gang-i-worker-j.lt  gang-j-worker-i.lt  gang-j-worker-j.lt  host-data.c  init.c  kernel-libopenacc.c  kernel-openacc.c  kernels.cl
tests/X09-tunning/: Makefile.in  README.md  X09-version.make.in  X09.make.in  blank-exec-config.rc  compile-109.sh.in  compile-509.sh.in  compile.sh.in  execute-109.sh.in  execute.sh.in  generate-109.sh.in  generate.sh.in  host-data-109.c  host-data-509.c  kernels-509.cl  main-109.c  main-509.c  process-109.sh  process.sh  versions.db
tests/scripts/: 100-rules.mk  100-rules.mk.in  500-rules.mk.in  environment.mk  environment.mk.in
tests/tuner/: Makefile.in  acc-tuner-execute.c  acc-tuner-generate.c
tuner/: Makefile  Makefile.in  README.md  acc-tuner-execute  acc-tuner-execute-103.c  acc-tuner-execute-109.c  acc-tuner-execute.c  acc-tuner-generate  acc-tuner-generate-104.c  acc-tuner-generate-109.c  acc-tuner-generate.c  acc-tuner-process-103.c  acc-tuner-process-104.c  acc-tuner-process-109.c  run-103.sh.in  run-104.sh.in  run-109.sh.in  run.sh.in
tuner/103/: host-data.c  kernels.cl  versions.db
tuner/104/: host-data.c  kernels.cl  versions.db
(+1643 files in other folders)
